@@ -1,3 +1,8 @@
+2019-10-30  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/65930
+	* gcc.dg/vect/pr65930-2.c: New testcase.
+
 2019-10-30  Mark Eggleston <mark.eggleston@codethink.com>
 
 	* gfortran.dg/no_overwrite_recursive_1.f90: New test.
